Added form the schedule restores
